# DogAlert

./: Cargo.toml  README.md  main.py  pyproject.toml
src/: bot.rs  debank.rs  main.rs  utils.rs
