[tool.poetry]
name = "dogalert"
version = "0.1.0"
description = ""
authors = ["Dan Shao <shaodan.cn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.0"
python-telegram-bot = {version = "^13.12", allow-prereleases = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
